# grove

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  LICENSE  Makefile  README.md  flake.nix  lefthook.yml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: PRD.md  cache-eviction.md  e2e-testing-plan.md  implementation-plan-sidecar-ftui-alignment.md  implementation-plan.md  manual-tab-launch-plan.md  simplify.md  workspace-scale-baseline.json  workspace-scale-benchmarks.md
docs/adr/: 001-frankentui-over-ratatui.md  002-frankentui-source-strategy.md  003-interactive-polling-strategy.md  004-workspace-metadata-and-lifecycle-contract.md  005-async-runtime-command-pipeline.md  006-output-trust-model-dual-lane.md  007-multiplexer-abstraction-and-parity.md  008-zellij-capture-log-replay-vt-emulation.md  009-multi-project-workspace-model.md  010-observability-contract-event-log-and-debug-record.md  011-git-preview-delegation-to-lazygit.md
docs/migrations/: 2026-03-manual-tab-launch-multi-tab-sessions.md  2026-03-task-model-single-workspace-agent-migration.md  2026-03-task-model.md
docs/plans/: 2026-03-07-ci-red-refactor-repair.md  2026-03-07-parent-agent-start-design.md  2026-03-07-parent-agent-start.md  2026-03-07-task-reorder-design.md  2026-03-07-task-reorder.md  2026-03-09-pr-url-remote-branch-design.md  2026-03-09-pr-url-remote-branch.md  2026-03-10-base-task-upstream-sync-design.md  2026-03-10-ftui-native-text-width-design.md  2026-03-10-ftui-native-text-width.md  2026-03-10-project-add-duplicate-state-design.md  2026-03-10-project-add-duplicate-state.md  2026-03-10-status-line-native-design.md  2026-03-10-status-line-native.md  2026-03-11-real-preview-cursor-design.md  2026-03-11-real-preview-cursor.md
nix/: devshell.nix  hm-module.nix  package.nix
scripts/: check-codex-flicker.sh  fake-codex-flicker-emitter.sh
src/: adapters.rs  agent_runtime.rs  config.rs  domain.rs  event_log.rs  hardening.rs  interactive.rs  lib.rs  lib_tests.rs  main.rs  main_tests.rs  mouse.rs  preview.rs  state.rs  tui.rs  workspace_lifecycle.rs  zellij_emulator.rs
src/adapters/: tests.rs
src/agent_runtime/: tests.rs
tests/: hello_cli.rs  hello_domain.rs  startup_reconciliation.rs
(+276 files in other folders)
