[package]
name = "grove"
version = "0.1.4"
edition = "2024"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
dirs = "6.0.0"
ftui = { git = "https://github.com/Dicklesworthstone/frankentui.git", tag = "v0.2.1", default-features = false, features = ["runtime", "crossterm"] }
ftui-extras = { git = "https://github.com/Dicklesworthstone/frankentui.git", tag = "v0.2.1", default-features = false, features = ["text-effects"] }
ftui-pty = { git = "https://github.com/Dicklesworthstone/frankentui.git", tag = "v0.2.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sysinfo = "0.33.1"

[dev-dependencies]
proptest = "1.6.0"

